update all file

--- a/src/main/java/view/CoSoView.form
+++ b/src/main/java/view/CoSoView.form
@@ -293,6 +293,9 @@
               <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\update.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_suaMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_xoa">
           <Properties>
@@ -300,6 +303,9 @@
               <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\delete.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_xoaMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_clear">
           <Properties>
@@ -307,6 +313,9 @@
               <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\clear.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_clearMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
