update dong, dungluong

--- a/src/main/java/view/DungLuongView.form
+++ b/src/main/java/view/DungLuongView.form
@@ -279,6 +279,9 @@
           </SubComponents>
         </Container>
         <Component class="javax.swing.JButton" name="btn_them">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_themActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_sua">
         </Component>
