--- a/src/main/java/view/ChiTietSPView.form
+++ b/src/main/java/view/ChiTietSPView.form
@@ -473,11 +473,6 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbx_dongsp">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
-            </Property>
-          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbx_dongspActionPerformed"/>
           </Events>
@@ -500,6 +495,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_searchMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_searchActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
