--- a/src/main/java/view/AdminView.form
+++ b/src/main/java/view/AdminView.form
@@ -229,6 +229,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Th&#x1ed1;ng k&#xea;"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_thongkeMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_logout">
               <Properties>
